--- a/src/Components/Sections/Left/MenuItem.module.css
+++ b/src/Components/Sections/Left/MenuItem.module.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
     
   }
   
@@ -15,6 +16,7 @@
   display: flex;
   justify-content: flex-end;
   right: 1.6rem;
+  border-right: 4px solid lightgray;
 
 
 }
