--- a/src/Components/Sections/Right/RightSide.module.css
+++ b/src/Components/Sections/Right/RightSide.module.css
@@ -1,6 +1,6 @@
 
 .container{
-    margin-left: 1.5rem;
+    margin-left: 1.5rem solid black;
     padding: 1rem;
     display: flex;
     flex-direction: column;
