Added tweet functionality

--- a/src/Atom/Tweet/Tweet.module.css
+++ b/src/Atom/Tweet/Tweet.module.css
@@ -30,7 +30,7 @@ width: 100%;
 }
 
 textarea {
-  background-color: #000000;
+  background-color: white;
   color: #e6ecf0;
   border: none;
   padding: 12px 20px;
