--- a/src/Components/Sections/Left/MenuItem.module.css
+++ b/src/Components/Sections/Left/MenuItem.module.css
@@ -16,7 +16,6 @@
   display: flex;
   justify-content: flex-end;
   right: 1.6rem;
-  border-right: 4px solid lightgray;
 
 
 }
@@ -49,6 +48,7 @@
   }
   .container{
     gap: 4rem;
+
   }
   .sidebarOption:hover {
     background-color:#50b7f5  ;
@@ -57,6 +57,10 @@
     transition: color 100ms ease-out;
     font-family: TwitterChirp, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif
   }
+
+  /* .sidebar:active{
+    background-color: black;
+  } */
 .innerContainer{
   position: fixed;
 }
@@ -113,3 +117,5 @@
   background-color: #e6ecf0;
 
 }
+
+
