--- a/src/Components/Sections/Middle/MiddleContainer.module.css
+++ b/src/Components/Sections/Middle/MiddleContainer.module.css
@@ -2,11 +2,12 @@
     position: fixed;
 /*  */
 width: 39.3vw;
-border-bottom: 10 px solid lightgray;
+border-bottom: 2px solid lightgray;
 }
 .twitterPostContainer{
     margin-top: 7.2rem;
     /* z-index: -2; */
+
 
 }
 .main{
@@ -20,8 +21,8 @@ border-bottom: 10 px solid lightgray;
     display: none;
 }
 .postContainer{
-    margin-top: 11.2rem;
-
+    margin-top: 11.8rem;
+    border-top: 2px solid lightgray;
     width: 100%;
     height: 100vh;
 }
