--- a/src/Components/Sections/ProfileSection/ProfileSection.module.css
+++ b/src/Components/Sections/ProfileSection/ProfileSection.module.css
@@ -74,3 +74,30 @@ margin-left: 0.5vw;
 gap: 2vw;
 margin-top: 3vh;
 }
+.wrapper{
+  color: black;
+  display: flex;
+  justify-content:flex-start;
+  flex-direction: column;
+  gap: 1rem;
+ padding: 2rem;
+}
+.container1{
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start;
+  gap: 1rem;
+}
+.icons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  color: rgb(102, 102, 192);
+}
+.img1{
+padding-left: 4rem;
+
+}
+.avatar{
+  z-index: -1;
+}
