--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -9,6 +9,8 @@
 
 .middleContainer{
     width: 40%;
+    border-left: 2px solid lightgray;
+    border-right: 2px solid lightgray;
 }
 .rightContainer{
     width:34%;
