--- a/src/Pages/Profile/Profile.module.css
+++ b/src/Pages/Profile/Profile.module.css
@@ -12,11 +12,12 @@
     width: 40%;
     border-left: 2px solid lightgray;
     border-right: 2px solid lightgray;
-    height: 100vh;
+    height: fit-content;
 }
 .rightContainer{
     width:34%;
     height: 100%;
+    margin-left: 2rem;
 }
 .main::-webkit-scrollbar{
     display: none;
