--- a/src/Components/Sections/ProfileSection/ProfileSection.module.css
+++ b/src/Components/Sections/ProfileSection/ProfileSection.module.css
@@ -54,7 +54,7 @@
 }
 .textcontaint{
   font-size:x-large;
-   font-weight: bold;
+   /* font-weight: bold; */
     padding: 1rem;
     color: black;
 }
@@ -71,8 +71,11 @@ margin-left: 0.5vw;
 
 .follow{
   display: flex;
-gap: 2vw;
-margin-top: 3vh;
+  gap: 2vw;
+  margin-top: 3vh;
+}
+.wrapper::-webkit-scrollbar{
+  display: none;
 }
 .wrapper{
   color: black;
@@ -80,7 +83,9 @@ margin-top: 3vh;
   justify-content:flex-start;
   flex-direction: column;
   gap: 1rem;
- padding: 2rem;
+  padding: 2rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
  
 }
 .container1{
@@ -88,6 +93,7 @@ margin-top: 3vh;
   flex-direction: row;
   justify-content:flex-start;
   gap: 1rem;
+ 
 }
 .icons{
   display: flex;
